k8s/overlays/staging/eventstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
  name: fbapp-eventstore-ingress
  namespace: fbapp
spec:
  rules:
  - host: es.fbapp.dev
    http:
      paths:
      - backend:
          service:
            name: eventstore
            port:
              number: 2113
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - es.fbapp.dev
