k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
  name: fbapp-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: fbapp
            port:
              number: 80
        path: /
        pathType: Prefix
